# HELLDECK

./: .autoheal.yaml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .toledo.yaml  ALL_WORK_COMPLETE.md  APP_REVIEW_REPORT.md  ARCHITECTURE.md  AUDIT_COMPLETE.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  BLOAT_ANALYSIS_REPORT.md  BLOAT_REDUCTION_COMPLETE.md  BUILD_VERIFICATION_COMPLETE.md  CARD_AUTOPSY.md  CARD_QUALITY_IMPROVEMENT_TRACKER.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPLETE_OVERHAUL_SUMMARY.md  CONTENT_BIBLE.md  CONTENT_GUIDELINES.md  CONTRIBUTING.md  DESCENT_BUILD_SPEC.md  DESIGN_FIXES_COMPLETE.md  DEVELOPMENT.md  DOCS_INDEX.md  FEATURES.md  FINAL_DELIVERY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_AUDIT_2026.md  GAME_RULES_VERIFICATION_REPORT.md  HANDOFF_2026-07-22.md  HDRealRules.md  HDRealRules2.md  HELLDECK2_HANDOFF.md  HELLDECK_2.0_DELIVERY_REPORT.md  (+31 more)
app/: CMakeLists.txt  build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt  proguard-rules.pro
app/src/main/assets/: gold_cards.json  gold_cards_v2.json
app/src/main/assets/gold/: gold_cards.json  gold_cards.json.backup  gold_cards_backup.json  gold_cards_v2.json
app/src/main/assets/lexicons/: categories.json  forbidden.json  friends.json  gross.json  guilty_prompts.json  icks.json  inbound_texts.json  letters.json  memes.json  perks.json  places.json  red_flags.json  reply_tones.json  sketchy_actions.json  social_disasters.json  tiny_rewards.json
app/src/main/assets/lexicons_v2/: abstract_concept.json  audience_type.json  awkward_contexts.json  bodily_functions.json  categories.json  celebrity.json  chaotic_plan.json  dating_green_flags.json  evidence_reason.json  gross_problem.json  guilty_behavior.json  internet_slang.json  letters.json  life_stat.json  mandatory_tones.json  meme_item.json  meme_references.json  perks_plus.json  personality_trait.json  phone_stat.json  physical_challenge.json  product_item.json  random_item.json  receipts.json  red_flag_issue.json  red_flag_traits.json  relationship_fails.json  reply_tone.json  secret_word.json  selfish_behaviors.json  sexual_innuendo.json  sketchy_action.json  skill_trait.json  social_context.json  social_reason.json  survival_scenario.json  taboo_forbidden.json  taboo_topics.json  text_messages.json  text_senders.json  (+2 more)
app/src/main/assets/model/: banned.json  logit.json  pairings.json  priors.json  rules.yaml  semantic_compatibility.json  tone_gate.yaml
app/src/main/assets/settings/: default.yaml
app/src/main/assets/templates/: templates.json
app/src/main/assets/templates_v2/: majority_report.json  roast_consensus.json
app/src/main/assets/templates_v3/: alibi_drop.json  confession_or_cap.json  fill_in_finisher.json  hot_seat_imposter.json  hype_or_yike.json  majority_report.json  odd_one_out.json  over_under.json  poison_pitch.json  poison_pitch_enhanced.json  reality_check.json  red_flag.json  red_flag_date_builder.json  roast_consensus.json  roast_consensus_enhanced.json  scatterblast.json  taboo_timer.json  text_trap.json  the_unifying_theory.json  title_fight.json
app/src/main/cpp/: llama_android_compat.h  llama_jni.cpp
app/src/main/res/values/: attrs.xml  (+3 more)
app/src/test/: AndroidManifest.xml  README.md
app/src/test/resources/: test-config.yaml
(+539 files in other folders)
